# flyradar

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: release.yml  website.yml
src/: auth.rs  command.rs  event.rs  handler.rs  main.rs  state.rs  transformations.rs  tui.rs  ui.rs  wireguard.rs
src/agent/: client.rs  errors.rs  mod.rs  proto.rs  set_sys_proc_attributes.rs  start.rs
src/agent/query/: gql_get_instances.graphql  gql_get_instances_schema.graphql
src/config/: file.rs  helpers.rs  mod.rs
src/fly_rust/: custom_humantime_serde.rs  machine_types.rs  machines.rs  mod.rs  request_builder.rs  resource_apps.rs  resource_logs.rs  resource_organizations.rs  resource_releases.rs  resource_secrets.rs  resource_wireguard.rs  volume_types.rs  volumes.rs
src/fly_rust/queries/: create_organization_invite.graphql  create_organization_invite_schema.graphql  delete_app.graphql  delete_app_schema.graphql  delete_organization.graphql  delete_organization_membership.graphql  delete_organization_membership_schema.graphql  delete_organization_schema.graphql  get_app_basic.graphql  get_app_basic_schema.graphql  get_app_compact.graphql  get_app_compact_schema.graphql  get_app_releases_machines.graphql  get_app_releases_machines_schema.graphql  get_app_secrets.graphql  get_app_secrets_schema.graphql  get_apps_page.graphql  get_apps_page_schema.graphql  get_detailed_organization_by_slug.graphql  get_detailed_organization_by_slug_schema.graphql  get_organizations.graphql  get_organizations_schema.graphql  unset_secrets.graphql  unset_secrets_schema.graphql  validate_wire_guard_peers.graphql  validate_wire_guard_peers_schema.graphql
src/logs/: entry.rs  mod.rs  nats.rs  polling.rs
src/ops/: lease.rs  logs.rs  mod.rs  select_many_machines.rs  wait.rs
src/ops/apps/: destroy.rs  list.rs  mod.rs  open.rs  releases.rs  restart.rs  services.rs
src/ops/machines/: cordon.rs  destroy.rs  kill.rs  list.rs  mod.rs  restart.rs  start.rs  stop.rs  suspend.rs  uncordon.rs
src/ops/organizations/: delete.rs  invite.rs  list.rs  members.rs  mod.rs  remove.rs
src/ops/secrets/: list.rs  mod.rs  unset.rs
src/ops/volumes/: destroy.rs  list.rs  mod.rs
src/state/: mod.rs  view.rs
src/widgets/: fly_balloon.rs  fly_visual.rs  focusable_check_box.rs  focusable_text.rs  focusable_widget.rs  form.rs  mod.rs  popup.rs  selectable_list.rs
src/widgets/log_viewer/: circular_buffer.rs  file.rs  inner.rs  mod.rs  smart.rs  standard.rs
website/: Dockerfile  fly.toml  gleam.toml  manifest.toml  package-lock.json  package.json
website/priv/: index.html  input.css  output.css  search.html
website/src/: flyradar_website.gleam
website/src/app/: router.gleam  web.gleam
