[package]
name = "flyradar"
version = "0.1.0-rc.1"
authors = ["Furkan Kalaycioglu <furkankalaycioglu12@gmail.com>"]
license = "MIT"
edition = "2021"


[dependencies]
reqwest = { version = "0.12.7", features = [
  "json",
  "rustls-tls",
], default-features = false }
clap = { version = "4.5.16", features = ["cargo", "derive", "string"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "5.0.1"
futures = "0.3.30"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.39.3", features = ["full"] }
tui-big-text = "0.7.0"
tui-input = "0.10.1"
tui-popup = "0.5.1"
textwrap = "0.16.1"
serde_json = "1.0.128"
unicode-width = "0.2.0"
itertools = "0.13.0"
focusable = { version = "0.2.6", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tui-logger = { version = "0.14.4", features = ["tracing-support"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_path_to_error = "0.1.16"
backon = { version = "1.2.0", features = ["tokio-sleep"] }
graphql_client = "0.14.0"
webbrowser = "1.0.2"
timeago = { version = "0.4.2", features = ["chrono"] }
humantime-serde = "1.1.1"
tokio-stream = "0.1.16"
tempfile = "3.14.0"
fslock = "0.2.1"
async-trait = { version = "0.1.83" }
async-nats = { git = "https://github.com/furkankly/nats.rs.git", package = "async-nats", branch = "ipc-support" }
libc = "0.2.169"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
fxhash = "0.2.1"
strip-ansi-escapes = "0.2.1"
tokio-util = "0.7.13"
chrono-humanize = "0.2.3"
